@@ -1,3 +1,8 @@
+2003-11-22  Kevin Vandersloot
+
+	* util.c, procdialogs.c: Fix hang when entering root password. Patch from
+	Kiran Kumar Immidi. Fixes bug #126923
+
 2003-11-19  Kevin Vandersloot
 
 	* load-graph.c: Fix the memory display to display the correct memory usage
